--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -2,5 +2,5 @@ bin_PROGRAMS = facedet
 
 facedet_SOURCES = facedet.c common.c
 
-facedet_CFLAGS = @OPENCV_CFLAGS@
+facedet_CFLAGS = @OPENCV_CFLAGS@ -pthread
 facedet_LDFLAGS = @OPENCV_LIBS@
