Added header files to facedet_SOURCES

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,6 +1,7 @@
 bin_PROGRAMS = facedet
 
-facedet_SOURCES = facedet.c common.c
+facedet_SOURCES = facedet.c facedet.h \
+                  common.c common.h
 
 facedet_CFLAGS = @OPENCV_CFLAGS@ -pthread
 facedet_LDFLAGS = @OPENCV_LIBS@
