Makefile.am for compiling the presentation

--- a/configure.ac
+++ b/configure.ac
@@ -22,5 +22,7 @@ else
 fi
 
 AC_CONFIG_HEADERS([config.h])
-AC_CONFIG_FILES([Makefile src/Makefile])
+AC_CONFIG_FILES([Makefile
+                 doc/Makefile
+                 src/Makefile])
 AC_OUTPUT
